<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jaketimm.inflationcalculator.MainActivity" >
    
    <EditText
        android:id="@+id/beforeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/enterValue"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/currencyBeforeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/beforeText"
        android:layout_alignTop="@+id/beforeText"
        android:drawSelectorOnTop="true" />
    
    <Spinner
        android:id="@+id/currencyAfterSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/afterText"
        android:layout_alignTop="@+id/afterText"
        android:drawSelectorOnTop="true" />

    <TextView
        android:id="@+id/isWorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/beforeYear"
        android:text="@string/isWorth" />

    <EditText
        android:id="@+id/beforeYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/beforeText"
        android:layout_toRightOf="@+id/in1"
        android:hint="@string/enterYear"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/afterYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/afterText"
        android:hint="@string/enterYear"
        android:layout_toRightOf="@+id/in2"
        android:ems="10"
        android:inputType="number"
        
    />

    <TextView
        android:id="@+id/in2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/afterYear"
        android:text="@string/in2" />
    
    <Button
        android:id="@+id/calculate"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/in2"
        android:text="@string/calculate"
        android:onClick="calculateValues"
        />
    
    <EditText
        android:id="@+id/afterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/isWorth"
        android:layout_below="@+id/isWorth"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/in1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/beforeYear"
        android:layout_toLeftOf="@+id/afterYear"
        android:text="@string/in" />
    
</RelativeLayout>